--- a/Cargo.toml
+++ b/Cargo.toml
@@ -186,7 +186,7 @@ rustls = {version = "0.23.28", optional = true}
 
 # For URL imports
 # Pinned for now due to upstream issues
-reqwest = { version = "=0.12.8", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
+reqwest = { version = "0.12.23", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
 http = { version = "^1.0", optional = true }
 deno_permissions = { version = "^0.72.0", optional = true }
 
